refactor: change server endpoint

--- a/src/client/public/blue-room.html
+++ b/src/client/public/blue-room.html
@@ -78,7 +78,7 @@
 
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>       
-        const socketRooms = io("https://dark-mangos-dress.loca.lt/rooms");
+        const socketRooms = io("https://websocket-presentation-26f3ea9ccde7.herokuapp.com/rooms");
         const sendButton = document.querySelector("button");
         const usersConnectedElement = document.getElementById("users-connected");
         const userIdElement = document.getElementById("user-id");
