--- a/src/client/public/home.html
+++ b/src/client/public/home.html
@@ -159,7 +159,7 @@
     </div>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>       
-        const socketHome = io("https://dark-mangos-dress.loca.lt/home");
+        const socketHome = io("https://websocket-presentation-26f3ea9ccde7.herokuapp.com/home");
         const feed = document.getElementById("feed");
         const redRoom = document.getElementById("red-room");
         const blueRoom = document.getElementById("blue-room");
